--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -62,7 +62,7 @@ jobs:
           mkdir openwrt-packages
           cd openwrt-packages
           git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
-          git clone https://github.com/Ameykyl/luci-app-koolproxyR
+          git clone https://github.com/immortalwrt/luci-app-koolproxyR.git
           git clone https://github.com/rosywrt/luci-theme-rosy
 
       - name: Update feeds
